tests/ui/const-generics/const_patam_ty_impl_bad_field.stderr
error[E0204]: the trait `ConstParamTy` may not be implemented for this type
  --> $DIR/const_patam_ty_impl_bad_field.rs:10:36
   |
LL | struct CantParam(NotParam);
   |                  -------- this field does not implement `ConstParamTy`
LL |
LL | impl std::marker::ConstParamTy for CantParam {}
   |                                    ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0204`.
